[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bilder/UI/arrowRight.png" type="Texture" id=1]
[ext_resource path="res://Bilder/UI/arrowLeft.png" type="Texture" id=2]
[ext_resource path="res://UI/Sellector.gd" type="Script" id=3]
[ext_resource path="res://Bilder/UI/Labels/arena_simple.png" type="Texture" id=4]
[ext_resource path="res://Bilder/UI/Labels/arena_large.png" type="Texture" id=5]
[ext_resource path="res://Bilder/UI/sellectorMask.png" type="Texture" id=6]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform sampler2D mask_texture;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.a = texture(mask_texture, UV).a;
}"

[sub_resource type="StreamTexture" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/mask_texture = SubResource( 5 )

[node name="Sellector" type="Node2D"]
script = ExtResource( 3 )

[node name="ArrowLeft" type="Node2D" parent="."]
position = Vector2( -20, 0 )

[node name="Button" type="TextureButton" parent="ArrowLeft"]
margin_left = -4.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = 6.0
texture_normal = ExtResource( 2 )

[node name="ArrowRight" type="Node2D" parent="."]
position = Vector2( 19, 0 )

[node name="Button" type="TextureButton" parent="ArrowRight"]
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 6.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Node2D" parent="."]
material = SubResource( 4 )

[node name="Sprite1" type="Sprite" parent="Label"]
light_mask = 2
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Label"]
visible = false
light_mask = 2
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
mode = 3
range_item_cull_mask = 2

[connection signal="button_down" from="ArrowLeft/Button" to="." method="_arrow_left_pressed"]
[connection signal="button_up" from="ArrowLeft/Button" to="." method="_arrow_left_released"]
[connection signal="button_down" from="ArrowRight/Button" to="." method="_arrow_right_pressed"]
[connection signal="button_up" from="ArrowRight/Button" to="." method="_arrow_right_released"]
